--- a/my-shop/package.json
+++ b/my-shop/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "coverflow-reactjs": "^1.1.0",
     "google-maps-react": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.27.12",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0"
   },
