--- a/my-shop/package.json
+++ b/my-shop/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "coverflow-reactjs": "^1.1.0",
     "google-maps-react": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
