--- a/my-shop/package.json
+++ b/my-shop/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "coverflow-reactjs": "^1.1.0",
     "google-maps-react": "^2.0.6",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
+    "react-tabs": "^3.1.2",
     "react-toastify": "^6.0.9",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0"
